--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div>testf00000</div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
