--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Vite App Test</title>
   </head>
   <body>
-    <!--<div id="app"></div>-->
-    <div>testf00000</div>
+    -<div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
